# dynamic_token-22_fee

./: Anchor.toml  Makefile  measurement.txt  package-lock.json  package.json
programs/l2/: Cargo.toml
programs/l2/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
tests/: l2.ts  pdas.ts  script.ts  utils.ts
token-manager/: Cargo.toml
token-manager/src/: main.rs  params.rs
