[package]
name = "l2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "l2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
switchboard-solana = "=0.29.75"
spl-token-2022 = {version= "1.0.0", features = ["no-entrypoint"]}
solana-program = "1.16.21"